[package]
name = "rs-screenshot-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
notify = "6.1.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
teloxide = { version = "0.12", features = ["macros"] }
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
sysinfo = "0.29.10"
